@Value() for injecting the values from .properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=spring-boot
 my.custom.property=Hello World!
+my.custom.property.2=Hello Geeks!
+my.custom.property.int=1999
