--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test,dev
+#spring.profiles.active=test,dev
 spring.application.name=spring-boot
 my.custom.property=Hello World!
 my.custom.property.2=Hello Geeks!
